; ModuleID = '/home/carl/AnghaBench/lab/engine/code/ui/extr_ui_shared.c_String_Init.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/ui/extr_ui_shared.c_String_Init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@HASH_TABLE_SIZE = common dso_local global i32 0, align 4
@strHandle = common dso_local global i32** null, align 8
@strHandleCount = common dso_local global i64 0, align 8
@strPoolIndex = common dso_local global i64 0, align 8
@menuCount = common dso_local global i64 0, align 8
@openMenuCount = common dso_local global i64 0, align 8
@DC = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @String_Init() #0 {
  %1 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  br label %2

2:                                                ; preds = %11, %0
  %3 = load i32, i32* %1, align 4
  %4 = load i32, i32* @HASH_TABLE_SIZE, align 4
  %5 = icmp slt i32 %3, %4
  br i1 %5, label %6, label %14

6:                                                ; preds = %2
  %7 = load i32**, i32*** @strHandle, align 8
  %8 = load i32, i32* %1, align 4
  %9 = sext i32 %8 to i64
  %10 = getelementptr inbounds i32*, i32** %7, i64 %9
  store i32* null, i32** %10, align 8
  br label %11

11:                                               ; preds = %6
  %12 = load i32, i32* %1, align 4
  %13 = add nsw i32 %12, 1
  store i32 %13, i32* %1, align 4
  br label %2

14:                                               ; preds = %2
  store i64 0, i64* @strHandleCount, align 8
  store i64 0, i64* @strPoolIndex, align 8
  store i64 0, i64* @menuCount, align 8
  store i64 0, i64* @openMenuCount, align 8
  %15 = call i32 (...) @UI_InitMemory()
  %16 = call i32 (...) @Item_SetupKeywordHash()
  %17 = call i32 (...) @Menu_SetupKeywordHash()
  %18 = load %struct.TYPE_2__*, %struct.TYPE_2__** @DC, align 8
  %19 = icmp ne %struct.TYPE_2__* %18, null
  br i1 %19, label %20, label %27

20:                                               ; preds = %14
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** @DC, align 8
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %27

25:                                               ; preds = %20
  %26 = call i32 (...) @Controls_GetConfig()
  br label %27

27:                                               ; preds = %25, %20, %14
  ret void
}

declare dso_local i32 @UI_InitMemory(...) #1

declare dso_local i32 @Item_SetupKeywordHash(...) #1

declare dso_local i32 @Menu_SetupKeywordHash(...) #1

declare dso_local i32 @Controls_GetConfig(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
